# Meerkat2

./: AbstractImageLoader.cpp  AbstractImageLoader.h  CBFDataReader.cpp  CBFDataReader.h  CBFImageLoader.cpp  CBFImageLoader.h  CMakeLists.txt  Corrections.cpp  Corrections.h  Geometry.cpp  Geometry.h  HDFDataReader.cpp  HDFDataReader.h  HDFImageLoader.cpp  HDFImageLoader.h  Hdf5HelperFuncitons.h  Hdf5HelperFunctions.cpp  ImageLoader.cpp  ImageLoader.h  ImageLoaderFactory.cpp  ImageLoaderFactory.h  OutputData.cpp  OutputData.h  README.md  ReconstructionParameters.cpp  ReconstructionParameters.h  TestYellFormat.cpp  main.cpp  misc.cpp  misc.h  test_meerkat.h
.github/workflows/: cmake-multi-platform.yml
cmake/: CBFlib.cmake  hdf5.cmake
libs/nanocbf/: cbfframe.cpp  cbfframe.h
python_scripts/: Download and check xds.ipynb
python_scripts/xds_files/: SPOT.XDS  XDS.INP  XPARM.XDS_target  known formats.txt
test files/snbl-cbf/: a_file.cbf
test files/tris-amide xds/: IDXREF.LP  XDS.INP  XPARM.XDS
test files/tris-amide xds/all/: ABS.cbf  ABSORP.cbf  BLANK.cbf  COLSPOT.LP  CORRECT.LP  DECAY.cbf  DEFPIX.LP  DX-CORRECTIONS.cbf  DY-CORRECTIONS.cbf  FRAME.cbf  GAIN.cbf  GX-CORRECTIONS.cbf  GXPARM.XDS  GXPARM.XDS_f  GY-CORRECTIONS.cbf  IDXREF.LP  INIT.LP  INTEGRATE.HKL  INTEGRATE.LP  MODPIX.cbf  SPOT.XDS  X-CORRECTIONS.cbf  XDS.INP  XDS_ASCII.HKL  XPLAN.LP  XYCORR.LP
